--- a/src/OrderProcessor.BO/OrderProcessor.BO.csproj
+++ b/src/OrderProcessor.BO/OrderProcessor.BO.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
-    <PackageReference Include="SQLite" Version="3.13.0" />
+    <ProjectReference Include="..\..\lib\OrderProcessor.CommonLibraries\OrderProcessor.CommonLibraries.csproj" />
   </ItemGroup>
 
 </Project>
