--- a/src/OrderProcessor.Web.API/OrderProcessor.Web.API.csproj
+++ b/src/OrderProcessor.Web.API/OrderProcessor.Web.API.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Service.csproj" />
+    <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Console.Service.csproj" />
   </ItemGroup>
 
 </Project>
