--- a/src/OrderProcessor.Web.API/appsettings.json
+++ b/src/OrderProcessor.Web.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbConnection": "Data Source=./OrderProcessor.db"
+  }
 }
