--- a/src/OrderProcessor.Console/OrderProcessor.Console.csproj
+++ b/src/OrderProcessor.Console/OrderProcessor.Console.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Console.Service.csproj" />
+    <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Service.csproj" />
   </ItemGroup>
 
 </Project>
