--- a/src/OrderProcessor.Web.API/appsettings.json
+++ b/src/OrderProcessor.Web.API/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AppDbConnection": "Data Source=./OrderProcessor.db"
-  }
+  "AllowedHosts": "*"
 }
