Started rebuilding system for web API usage

--- a/src/OrderProcessor.Test/OrderProcessor.Service.Test.csproj
+++ b/src/OrderProcessor.Test/OrderProcessor.Service.Test.csproj
@@ -25,8 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\lib\OrderProcessor.CommonLibraries\OrderProcessor.CommonLibraries.csproj" />
     <ProjectReference Include="..\OrderProcessor.BO\OrderProcessor.BO.csproj" />
-    <ProjectReference Include="..\OrderProcessor.Common\OrderProcessor.Common.csproj" />
-    <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Console.Service.csproj" />
+    <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
