--- a/src/OrderProcessor.Web.API/appsettings.json
+++ b/src/OrderProcessor.Web.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbConnection": "Data Source=./OrderProcessor.db"
+    "AppDbConnection": "Data Source=./OrderProcessorDatabase.db"
   }
 }
