--- a/src/OrderProcessor.Web.API/Properties/launchSettings.json
+++ b/src/OrderProcessor.Web.API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29297",
+      "applicationUrl": "http://127.0.0.1:29297",
       "sslPort": 44342
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "",
-      "applicationUrl": "http://localhost:5256",
+      "applicationUrl": "http://127.0.0.1:5256",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "",
-      "applicationUrl": "https://localhost:7092;http://localhost:5256",
+      "applicationUrl": "https://127.0.0.1:7092",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
