--- a/src/OrderProcessor.Web.API/OrderProcessor.Web.API.csproj
+++ b/src/OrderProcessor.Web.API/OrderProcessor.Web.API.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\OrderProcessor.Service\OrderProcessor.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
