Used JWT instead of session GUIDs

--- a/src/OrderProcessor.Web.API/appsettings.json
+++ b/src/OrderProcessor.Web.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppDbConnection": "Data Source=./OrderProcessorDatabase.db"
+  },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong",
+    "Issuer": "OrderProcessor",
+    "Audience": "OrderProcessorClients",
+    "ExpirationMinutes": 60
   }
 }
