--- a/src/OrderProcessor.BO/OrderProcessor.BO.csproj
+++ b/src/OrderProcessor.BO/OrderProcessor.BO.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\OrderProcessor.CommonLibraries\OrderProcessor.CommonLibraries.csproj" />
+    <ProjectReference Include="..\..\lib\OrderProcessor.CommonLibraries\OrderProcessor.Common.csproj" />
   </ItemGroup>
 
 </Project>
